--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p>
+		 <label>Enter your  Name</label>
+		 <input type="text" placeholder="Enter a Name" id="name" />
+	</p>
+
+    <p>
+		<label>Enter Your Email'Id </label>
+        <input type="text" placeholder="xyz@gmail.com" id="emailid" />
+	</p>
+
+	 <p>
+        <label>Select Your Gender :</label>
+        <label for="Male">Male</label>
+        <input type="radio" name="Gender" value="Male" />
+        <label for="female">Female</label>
+        <input type="radio" name="Gender" value="Female" />
+     </p>
+
+	  <p>
+        <label>Select Laptop Brands :</label>
+        <select name="Laptop Brands">
+        <option>Asus</option>
+        <option>HP</option>
+        </select>
+        </p>
+
+		<p>
+        <label>Date Of Birth :</label>
+        <input type="date" name="birthDate" id="DOB" />
+     </p>
+	 
+		<p>
+        <label>Enter Your Password </label>
+        <input type="password" placeholder="Enter your password" id="pwd" />
+     </p>
+
+	 <p>
+		<input type="button" value="Submit" id="sb" />
+	 </p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
