--- a/main.html
+++ b/main.html
@@ -39,7 +39,12 @@
         <label>Date Of Birth :</label>
         <input type="date" name="birthDate" id="DOB" />
      </p>
-	 
+
+	 <p>
+        <label>Enter your Age :</label>
+        <input type="text" name="Age" id="age" />
+     </p>
+
 		<p>
         <label>Enter Your Password </label>
         <input type="password" placeholder="Enter your password" id="pwd" />
