--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
 
 	<p>
-		 <label>Enter your  Name</label>
+		 <label>Enter your  Name :</label>
 		 <input type="text" placeholder="Enter a Name" id="name" />
 	</p>
 
     <p>
-		<label>Enter Your Email'Id </label>
+		<label>Enter Your Email'Id :</label>
         <input type="text" placeholder="xyz@gmail.com" id="emailid" />
 	</p>
 
@@ -30,6 +30,7 @@
 	  <p>
         <label>Select Laptop Brands :</label>
         <select name="Laptop Brands">
+		<option>Apple</option>
         <option>Asus</option>
         <option>HP</option>
         </select>
@@ -37,17 +38,17 @@
 
 		<p>
         <label>Date Of Birth :</label>
-        <input type="date" name="birthDate" id="DOB" />
+        <input type="date" name="birthDate" id="dob" />
      </p>
 
 	 <p>
         <label>Enter your Age :</label>
-        <input type="text" name="Age" id="age" />
+        <input type="text" placeholder="Enter your age" id="age" />
      </p>
 
 		<p>
-        <label>Enter Your Password </label>
-        <input type="password" placeholder="Enter your password" id="pwd" />
+        <label>Enter Your Password :</label>
+        <input type="password" placeholder="Enter your password" id="password" />
      </p>
 
 	 <p>
