--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         <input type="radio" name="gender" value="male" id="gender" required/>male
         <input type="radio" name="gender" value="female" id="gender" required/>femail<br>
      
-        <label for="laptop">Laptop Brands</label>
+        <label for="laptop" id="laptop">Laptop Brands</label>
         <select id="Laptop">
 		<option value="Apple">Apple</option>
         <option value="Asus">Asus</option>
